--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.4.1",
     "@next/font": "^13.4.3",
+    "@types/glidejs__glide": "^3.4.0",
     "@types/node": "18.11.13",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
